--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
+
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id "org.springframework.boot" version "2.0.1.RELEASE"
 }
 
 group 'org.example'
@@ -10,7 +12,16 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.3.0.RELEASE'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
+    testCompile 'org.mockito:mockito-core:2.8.9'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0'
+
+}
+
+test{
+    useJUnitPlatform()
 }
 
 compileKotlin {
